--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -1,74 +1,94 @@
-body{
-    background: linear-gradient(to left bottom,  #A9F1DF ,  #ffbbbb);
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;700&display=swap");
+
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+	font-family: "Titillium Web", sans-serif;
 }
-.Navbar{
-    background-color: transparent;
-    color:  white;
-    display: flex;
-    border-radius: 45px;
-    width: 94%;
-    margin-left: 3%;
-    margin-top: 2%;
-    margin-bottom: 2%;
-    box-shadow: -10px -10px 90px 10px rgb(129, 129, 129);
+
+:root {
+	--mainColor: #29335c;
+	--mainColorLight: #5767aa;
+	--secondaryColor: #db2b39;
+	--textColor: #eee;
 }
-.Navbar ul{
-    display: flex;
-    justify-content: space-between;
-    width: 40%;
-    margin-top: 2%;
-    margin-left: 15%;
-    margin-bottom: 2%;
-    position: relative;
-    list-style-type: none;
-    gap: 20px;
+
+header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	height: 80px;
+	padding: 0 2rem;
+	background-color: var(--mainColor);
+	color: var(--textColor);
 }
-.nav-items{
-    background-color: white;
-    border: none;
-    padding: 0%;
-    height: 45px;
-    width: 180px;
+
+header img{
+    width: 50px;
     border-radius: 15px;
 }
 
-.logo{
-    width: 40%;
-    height: 50%;
-    border-radius: 55%;
-    margin-top: 20%;
-    margin-left: 15%;
+nav a {
+	margin: 0 1rem;
+	color: var(--textColor);
+	text-decoration: none;
 }
-.profile{
-    width: 5%;
-    height: 10%;
-    margin-inline-start: auto;
-    margin-top: 1%;
-    margin-right: 1%;
-    border-radius: 50%;
-    animation: anim 5s infinite;
-    border: 1px solid black;
-    box-shadow: 2px 2px 10px rgb(119, 246, 248);
+
+nav a:hover {
+	color: var(--secondaryColor);
 }
-.profile:hover{
-    width: 75px;
-    height: 75px;
+
+header .nav-btn {
+	padding: 5px;
+	cursor: pointer;
+	background: transparent;
+	border: none;
+	outline: none;
+	color: var(--textColor);
+	visibility: hidden;
+	opacity: 0;
+	font-size: 1.8rem;
 }
-@keyframes anim {
-    0%{
-        transform: rotate(0deg);
-    }
-    25%{
-        transform: rotate(45deg);
-    }
-    50%{
-        transform: rotate(-45deg);
-    }
-    75%{
-        transform: rotate(45deg);
-    }
-    100%{
-        transform: rotate(0deg);
-        animation-delay: 10s;
-    }
+
+header div,
+nav {
+	display: flex;
+	align-items: center;
+}
+
+@media only screen and (max-width: 1024px) {
+	header .nav-btn {
+		visibility: visible;
+		opacity: 1;
+	}
+
+	header nav {
+		position: fixed;
+		top: -100vh;
+		left: 0;
+		height: 100%;
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		gap: 1.5rem;
+		background-color: var(--mainColor);
+		transition: 1s;
+	}
+
+	header .responsive_nav {
+		transform: translateY(100vh);
+	}
+
+	nav .nav-close-btn {
+		position: absolute;
+		top: 2rem;
+		right: 2rem;
+	}
+
+	nav a {
+		font-size: 1.5rem;
+	}
 }
