--- a/src/Projects/Projects.css
+++ b/src/Projects/Projects.css
@@ -67,3 +67,47 @@
 
 
 
+@media only screen and (min-width:320px) {
+    .whole{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+    .project-title hr{
+        margin-left: 25%;
+        margin-top: -4%;
+    }
+    .project-tech hr{
+        margin-left: 30%;
+    }
+    .project-link{
+        margin-top: 3%;
+    }
+}
+
+@media only screen and (min-width:768px) {
+    .whole{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .project-title hr{
+        margin-left: 35%;
+    }
+}
+
+@media only screen and (min-width:992px) {
+    .whole{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .project-title hr{
+        margin-left: 40%;
+        margin-top: -2%;
+    }
+}
+
+@media only screen and (min-width:1280px) {
+    .whole{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
