--- a/src/Skills/Skills.css
+++ b/src/Skills/Skills.css
@@ -11,7 +11,7 @@
 }
 
 .skills-container{
-    padding: 5% 10%;
+    padding: 5% 15% 5% 8%;
     display: flex;
     justify-content: space-between;
 }
@@ -51,70 +51,141 @@
 }
 
 
-
-
+/* ImageCircle.css */
 .circle-container {
     position: relative;
-    width: 400px;  /* Adjust size as needed */
-    height: 400px; /* Adjust size as needed */
-    margin: auto;
+    width: 500px;
+    height: 500px;
     border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.circle-image {
+    margin: 0 auto;
+    margin-top: 40px;
+  }
+  
+  .circle-item {
     position: absolute;
-    width: 50px;  /* Adjust image size as needed */
-    height: 50px; /* Adjust image size as needed */
+    width: 80px;
+    height: 100px;
+    text-align: center;
+  }
+  
+  .circle-item img {
+    width: 60px;
+    height: 50px;
     border-radius: 50%;
-    overflow: hidden;
-}
-
-.circle-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 50%;
-}
-
-/* Position each image around the circle */
-.circle-image:nth-child(1) { top: 0; left: 50%; transform: translate(-50%, -50%); }
-.circle-image:nth-child(2) { top: 15%; left: 85%; transform: translate(-50%, -50%); }
-.circle-image:nth-child(3) { top: 50%; left: 100%; transform: translate(-50%, -50%); }
-.circle-image:nth-child(4) { top: 85%; left: 85%; transform: translate(-50%, -50%); }
-.circle-image:nth-child(5) { top: 100%; left: 50%; transform: translate(-50%, -50%); }
-.circle-image:nth-child(6) { top: 85%; left: 15%; transform: translate(-50%, -50%); }
-.circle-image:nth-child(7) { top: 50%; left: 0; transform: translate(-50%, -50%); }
-.circle-image:nth-child(8) { top: 15%; left: 15%; transform: translate(-50%, -50%); }
-
-
+  }
+  
+  .circle-item:nth-child(1) {
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  
+  .circle-item:nth-child(2) {
+    top: 25%;
+    left: 85%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .circle-item:nth-child(3) {
+    top: 50%;
+    left: 100%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .circle-item:nth-child(4) {
+    top: 75%;
+    left: 85%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .circle-item:nth-child(5) {
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  
+  .circle-item:nth-child(6) {
+    top: 75%;
+    left: 15%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .circle-item:nth-child(7) {
+    top: 50%;
+    left: 0;
+    transform: translate(-50%, -50%);
+  }
+  
+  .circle-item:nth-child(8) {
+    top: 25%;
+    left: 15%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .circle-item p {
+    margin-top: 5px;
+    font-size: 12px;
+  }
+  
+/* ImageCircleWithCaptions.css */
 .circle-container1 {
     position: relative;
-    width: 400px;  /* Adjust size as needed */
-    height: 400px; /* Adjust size as needed */
-    margin: auto;
+    width: 500px;
+    height: 500px;
     border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.circle-image1 {
+    margin: 0 auto;
+    margin-top: 25px;
+  }
+  
+  .circle-item1 {
     position: absolute;
-    width: 50px;  /* Adjust image size as needed */
-    height: 50px; /* Adjust image size as needed */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform-origin: 150px 150px; /* Center of the circle-container */
+  }
+  
+  .circle-item1 img {
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
-    overflow: hidden;
-}
-
-.circle-image1 img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 50%;
-}
+  }
+  .circle-item1:nth-child(1) {
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  
+  .circle-item1:nth-child(2) {
+    top: 35%;
+    left: 95%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .circle-item1:nth-child(3) {
+    top: 75%;
+    left: 90%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .circle-item1:nth-child(4) {
+    top: 75%;
+    left: 10%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .circle-item1:nth-child(5) {
+    bottom: 55%;
+    left: 5%;
+    transform: translateX(-50%);
+  }
+  
+  .caption {
+    margin-top: 8px;
+    text-align: center;
+    font-size: 12px;
+  }
+  
 
 .rotate-ball{
     width: 10px;
@@ -125,38 +196,32 @@
     position: absolute;
     animation: rotate 4s linear infinite;
 }
-.circle-image1:nth-child(1) { top: 0; left: 50%; transform: translate(-50%, -50%); }
-.circle-image1:nth-child(2) { top: 30%; left: 95%; transform: translate(-50%, -50%); }
-.circle-image1:nth-child(3) { top: 80%; left: 85%; transform: translate(-50%, -50%); }
-.circle-image1:nth-child(4) { top: 80%; left: 10%; transform: translate(-50%, -50%); }
-.circle-image1:nth-child(5) { top: 30%; left: 5%; transform: translate(-50%, -50%); }
-
 
 
 @keyframes rotate {
     0% {
         left: 50%;
-        top: 10%;
+        top: 15%;
         transform: translateX(-50%);
     }
     25%{
         left: 10%;
-        top: 50%;
+        top: 45%;
         transform: translateX(-50% -50%);
     }
     50%{
         left: 50%;
-        top: 90%;
+        top: 80%;
         transform: translateX(-50% -50%);
     }
     75%{
         left: 90%;
-        top: 50%;
+        top: 45%;
         transform: translateX(-50% -50%);
     }
     100% {
         left: 50%;
-        top: 10%;
+        top: 15%;
         transform: translateX(-50%);
     }
 }
@@ -174,7 +239,7 @@
 @keyframes rotates {
     0%{
         left: 50%;
-        top: 10%;
+        top: 15%;
         transform: translateX(-50%);
     }
     20%{
@@ -188,8 +253,8 @@
         transform: translateX(-50% -50%);
     }
     60%{
-        top: 75%;
-        left: 75%;
+        top: 70%;
+        left: 80%;
         transform: translateX(-50% -50%);
     }
     80%{
@@ -198,62 +263,49 @@
         transform: translateX(-50% -50%);
     }
     100%{
-        top: 10%;
+        top: 15%;
         left: 50%;
         transform: translateX(-50%);
     }
 }
 
-.html-skill{
-    margin-left:-590px; 
-    margin-top: 20px;
-}
-.css-skill{
-    margin-left: -310px;
-    margin-top: 45px;
-}
-.js-skill{
-    margin-left: -200px;
-    margin-top: 115px;
-}
-.python-skill{
-    margin-left: -340px;
-    margin-top: 110px;
-}
-.node-skill{
-    margin-left: -600px;
-    margin-top: 50px;
-}
-.react-skill{
-    margin-left: -880px;
-    margin-top: -100px;
-}
-.sql-skill{
-    margin-left: -980px;
-    margin-top: -170px;
-}
-.wordpress-skill{
-    margin-left: -900px;
-    margin-top: -180px;
-}
-.criticalThink{
-    margin-left: -600px;
-    margin-top: 30px;
-}
-.communication{
-    margin-left: -270px;
-    margin-top: 80px;
-}
-.multiTasking{
-    margin-left: -320px;
-    margin-top: 160px;
-}
-.teamWork{
-    margin-left: -920px;
-    margin-top: -20px;
-}
-.timeMgmt{
-    margin-left: -920px;
-    margin-top: -250px;
+
+@media only screen and (min-width:320px) {
+  .skills h1{
+    margin: 10% 0px;
+  }
+  .skills-container{
+    margin: 0;
+    padding: 0;
+    gap: 100px;
+    display: flex;
+    flex-direction: column;
+  }
+  .soft-skills{
+    margin: 0% 10%;
+  }
 }
 
+@media only screen and (min-width:768px) {
+  .skills-container{
+    text-align: center;
+    align-items: center;
+  }
+  .technical-skills{
+    margin-left: 0%;
+  }
+  .soft-skills{
+    margin-left: 10%;
+  }
+}
+
+@media only screen and (min-width:1280px) {
+  .skills-container{
+    display: flex;
+    flex-direction: row;
+    margin-left: 10%;
+  }
+  .skills h1{
+    margin-bottom: 5%;
+  }
+}
