--- a/src/Skills/Skills.css
+++ b/src/Skills/Skills.css
@@ -27,10 +27,14 @@
     outline: none;
     margin-left: 10%;
 }
+
 .technical-skills .circle-container h1{
     font-size: 35px;
     font-weight: 600;
     line-height: 1.5;
+    text-align: center;
+    justify-content: center;
+    margin-top: 60%;
 }
 
 .soft-skills{
@@ -48,6 +52,9 @@
     font-size: 35px;
     font-weight: 600;
     line-height: 1.5;
+    text-align: center;
+    justify-content: center;
+    margin-top: 60%;
 }
 
 
@@ -281,8 +288,94 @@
     display: flex;
     flex-direction: column;
   }
+  .technical-skills{
+    width: 300px;
+    height: 300px;
+    margin-left: 20%;
+  }
   .soft-skills{
-    margin: 0% 10%;
+    margin: 0% 20%;
+    width: 300px;
+    height: 300px;
+  }
+  .circle-item1:nth-child(1) {
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  
+  .circle-item1:nth-child(2) {
+    top: 35%;
+    left: 92%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .circle-item1:nth-child(3) {
+    top: 75%;
+    left: 83%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .circle-item1:nth-child(4) {
+    top: 75%;
+    left: 18%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .circle-item1:nth-child(5) {
+    bottom: 55%;
+    left: 7%;
+    transform: translateX(-50%);
+  }
+  .circle-item:nth-child(1) {
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  
+  .circle-item:nth-child(2) {
+    top: 30%;
+    left: 85%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .circle-item:nth-child(3) {
+    top: 50%;
+    left: 100%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .circle-item:nth-child(4) {
+    top: 73%;
+    left: 85%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .circle-item:nth-child(5) {
+    bottom: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  
+  .circle-item:nth-child(6) {
+    top: 73%;
+    left: 15%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .circle-item:nth-child(7) {
+    top: 50%;
+    left: 0;
+    transform: translate(-50%, -50%);
+  }
+  
+  .circle-item:nth-child(8) {
+    top: 30%;
+    left: 15%;
+    transform: translate(-50%, -50%);
+  }
+  .circle-container h1{
+    margin-top: 30%;
   }
 }
 
