--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -19,6 +19,7 @@ header {
 	align-items: center;
 	justify-content: space-between;
 	height: 80px;
+	width: 100vw;
 	padding: 0 2rem;
 	background-color: var(--mainColor);
 	color: var(--textColor);
