--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -14,16 +14,14 @@
 	--textColor: #eee;
 }
 
-body{
-	width: 93vw;
-}
 
 header {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	height: 80px;
-	width: 97vw;
+	width: 98vw;
+	margin-left: 2%;
 	padding: 0 2rem;
 	background-color: var(--mainColor);
 	color: var(--textColor);
@@ -62,6 +60,15 @@ nav {
 	align-items: center;
 }
 
+@media only screen and (min-width:320px) {
+	body{
+		width: 87vw;
+	}
+	header{
+		width: 109%;
+		margin-left: 1%;
+	}
+}
 
 
 @media only screen and (max-width: 1024px) {
