--- a/src/About/About.css
+++ b/src/About/About.css
@@ -36,7 +36,9 @@
     }
     .about_page div h1{
         text-align: center;
-        margin: 10% 0px;
+        margin-left: 0;
+        margin-top: 10%;
+        margin-bottom: 5%;
     }
     .about_page div p{
         width: 90%;
@@ -44,9 +46,10 @@
     }
     .about_img{
         border-radius: 0%;
-        margin: 4% 10%;
+        margin-left: 13%;
+        margin-top: 2%;
         height: 300px;
-        width: 400px;
+        width: 350px;
     }
 }
 
